--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  color: "#fff";
+  background-color: "#1f1934";
+}
+
+main {
+  background-color: "#393a47";
+  height: 100vh;
+  height: 100dvh;
+}
