--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,3 +13,9 @@ main {
   height: 100vh;
   height: 100dvh;
 }
+
+.swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
+.swiper-pagination-horizontal.swiper-pagination-bullets
+  .swiper-pagination-bullet {
+  background-color: #f5741c;
+}
